# CheckersGameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.txt
Documentation/: Design Document Template.odt  Design Document.odt  Design_Documentation.md  Requirements.txt
src/: main.cpp  olcPixelGameEngine.h
src/game/: GameBoard.cpp  GameBoard.h  GameManager.cpp  GameManager.h  GameRecorder.cpp  GameRecorder.h  Move.h
src/game/modes/: ComputerVsComputer.cpp  ComputerVsComputer.h  GameMode.cpp  GameMode.h  HumanVsComputer.cpp  HumanVsComputer.h  HumanVsHuman.cpp  HumanVsHuman.h
src/game/players/: AIPlayer.cpp  AIPlayer.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h
src/view_controller/: GUI.cpp  GUI.h  PTUI.cpp  PTUI.h  View.cpp  View.h  olcPixelGameEngine.h
test/: cache2.cpp  catch_amalgamated.hpp
test/game/: test_gameboard.cpp  test_move.cpp
