cmake_minimum_required(VERSION 3.17)
project(Checkers)
set(CMAKE_CXX_STANDARD 17)
add_executable(Checkers src/main.cpp src/view_controller/GUI.cpp src/view_controller/GUI.h src/view_controller/View.cpp src/view_controller/View.h src/game/GameManager.cpp src/game/GameManager.h src/view_controller/PTUI.cpp src/view_controller/PTUI.h src/game/modes/GameMode.cpp src/game/modes/GameMode.h src/game/players/Player.cpp src/game/players/Player.h src/game/Move.h src/game/GameBoard.cpp src/game/GameBoard.h src/game/GameRecorder.cpp src/game/GameRecorder.h src/game/modes/HumanVsHuman.cpp src/game/modes/HumanVsHuman.h src/game/modes/HumanVsComputer.cpp src/game/modes/HumanVsComputer.h src/game/modes/ComputerVsComputer.cpp src/game/modes/ComputerVsComputer.h src/game/players/HumanPlayer.cpp src/game/players/HumanPlayer.h src/game/players/AIPlayer.cpp src/game/players/AIPlayer.h)
add_executable(Checkers_Test test/game/test_move.cpp test/cache2.cpp test/catch_amalgamated.hpp src/game/GameManager.cpp src/game/GameManager.h src/game/modes/GameMode.cpp src/game/modes/GameMode.h src/game/players/Player.cpp src/game/players/Player.h src/game/Move.h src/game/GameBoard.cpp src/game/GameBoard.h src/game/GameRecorder.cpp src/game/GameRecorder.h src/game/modes/HumanVsHuman.cpp src/game/modes/HumanVsHuman.h src/game/modes/HumanVsComputer.cpp src/game/modes/HumanVsComputer.h src/game/modes/ComputerVsComputer.cpp src/game/modes/ComputerVsComputer.h src/game/players/HumanPlayer.cpp src/game/players/HumanPlayer.h src/game/players/AIPlayer.cpp src/game/players/AIPlayer.h)
target_link_libraries(Checkers X11 GL pthread png stdc++fs)